[package]
name = "promql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.0"
pest_derive = "2.0"
pest_meta = "2.5"
strum = "0.24.1"
strum_macros = "0.24.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
clap = { version = "3.2.23", features = ["derive"] }